minor alignment fix in login page ui

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -330,6 +330,7 @@ p{
 
 .login-view{
   width: 411px;
+  margin-left: -7.5px;
 
   & .box{
   }
@@ -450,7 +451,7 @@ p{
 
 .infoFrame{
   width: 415px;
-  height: 310px;
+  height: 300px;
   margin: 0px;
   margin-left: 40px;
   display: none;
